<resources>
    <string name="app_name">CarbonCheck</string>
    <string name="total_usage">우리집 탄소 배출량</string>
    <string name="device_info">기기 정보</string>
    <string name="solution">일일 미션</string>
    <string name="user_info">정보 관리</string>
    <string name="my_usage">나의 오늘 배출량</string>
    <string name="my_weekly_usage">나의 주간 배출량</string>
    <string name="home_usage">우리집 오늘 배출량</string>
    <string name="home_weekly_usage">우리집 주간 배출량</string>
    <string name="recent_usage">최근 사용량</string>
    <string name="total_emissions">총 배출량</string>
    <string name="ranking">우리집 랭킹</string>
    <string name="total_rank_week">주간 배출량 랭킹</string>
    <string name="total_rank_month">월간 배출량 랭킹</string>
    <string name="mission_rank_week">주간 미션 달성 랭킹</string>
    <string name="mission_rank_month">월간 미션 달성 랭킹</string>
    <string name="detailed_usage">실시간 사용량</string>
    <string name="loading">계산중…</string>


</resources>