<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TotalUsageFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/total_usage_title_bar"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pretendard_extrabold"
                        android:textColor="@color/secondary"
                        android:text="@string/total_usage"
                        android:textSize="24dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/my_usage_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/total_usage_title_bar">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp">

                        <ImageView
                            android:id="@+id/person_icon"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:width="20dp"
                            android:height="20dp"
                            android:src="@drawable/person_48px"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/third" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:fontFamily="@font/pretendard_medium"
                            android:text="@string/my_usage"
                            android:textColor="@color/third"
                            app:layout_constraintBottom_toBottomOf="@id/person_icon"
                            app:layout_constraintStart_toEndOf="@id/person_icon"
                            app:layout_constraintTop_toTopOf="@id/person_icon" />

                        <app.futured.donut.DonutProgressView
                            android:id="@+id/donut_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            app:donut_bgLineColor="@color/cloud"
                            app:donut_gapAngle="270"
                            app:donut_gapWidth="20"
                            app:donut_strokeWidth="16dp"
                            app:layout_constraintTop_toBottomOf="@id/person_icon"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/home_usage_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/my_usage_card">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp">

                    <ImageView
                        android:id="@+id/icon_group"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:width="20dp"
                        android:height="20dp"
                        android:src="@drawable/group_48px"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/third" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:fontFamily="@font/pretendard_medium"
                        android:text="@string/home_usage"
                        android:textColor="@color/third"
                        app:layout_constraintBottom_toBottomOf="@id/icon_group"
                        app:layout_constraintStart_toEndOf="@id/icon_group"
                        app:layout_constraintTop_toTopOf="@id/icon_group" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>
</FrameLayout>